<?xml version="1.0"?>
<package>
  <name>livox_sdk2</name>
  <version>1.0.0</version>
  <description>livox_sdk2</description>

  <maintainer email="josh@burro.ai">Josh</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

</package>
